--- a/components/home-page/hero.module.css
+++ b/components/home-page/hero.module.css
@@ -1,38 +1,46 @@
 .hero {
-    text-align: center;
-    background-image: linear-gradient(to bottom,
+  text-align: center;
+  /* background-image: linear-gradient(to bottom,
             var(--color-grey-900),
-            var(--color-grey-800));
-    padding: var(--size-8) 0;
+            var(--color-grey-800)); */
+  background: rgb(255, 145, 0);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 145, 0, 0.7232142857142857) 0%,
+    rgba(121, 9, 88, 0.7736344537815126) 81%
+  );
+  padding: var(--size-8) 0;
 }
 
 .image {
-    width: 300px;
-    height: 300px;
-    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 50%;
-    overflow: hidden;
-    background-color: var(--color-grey-700);
-    margin: auto;
+  width: 300px;
+  height: 300px;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+  overflow: hidden;
+  /* background-color: var(--color-grey-700); */
+  margin: auto;
 }
 
 .image img {
-    object-fit: cover;
-    object-position: top;
-    width: 100%;
-    height: 100%;
+  object-fit: cover;
+  object-position: top;
+  width: 100%;
+  height: 100%;
 }
 
 .hero h1 {
-    font-size: var(--size-16);
-    margin: var(--size-4) 0;
-    color: var(--color-grey-300);
+  font-size: var(--size-16);
+  margin: var(--size-4) 0;
+  /* color: var(--color-grey-300); */
+  color: var(--color-grey-50);
 }
 
 .hero p {
-    font-size: var(--size-6);
-    color: var(--color-grey-200);
-    width: 90%;
-    max-width: 40rem;
-    margin: auto;
+  font-size: var(--size-6);
+  /* color: var(--color-grey-200); */
+  color: var(--color-grey-50);
+  width: 90%;
+  max-width: 40rem;
+  margin: auto;
 }
